# pi-mono-py

./: .env.example  AGENTS.md  CLAUDE.md  README.md  mypy.ini  pi-mono-wiki.md  pyproject.toml  ruff.toml
.pi/: settings.yaml
openspec/changes/archive/2026-03-04-ts-to-python-migration/: tasks.md
openspec/changes/archive/2026-03-04-ts-to-python-migration/specs/coding-agent/: spec.md
openspec/changes/archive/2026-03-04-ts-to-python-migration/specs/pi-extensions/: spec.md
openspec/changes/archive/2026-03-26-move-llm-config-to-env/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-move-llm-config-to-env/specs/ai-openai-compat/: spec.md
openspec/changes/archive/2026-03-26-move-llm-config-to-env/specs/coding-agent/: spec.md
openspec/changes/archive/2026-03-26-move-llm-config-to-env/specs/dotenv-runtime-config/: spec.md
openspec/changes/archive/2026-03-26-move-llm-config-to-env/specs/pi-extensions/: spec.md
openspec/changes/ts-to-python-migration/: design.md  proposal.md  tasks.md
openspec/changes/ts-to-python-migration/specs/agent-core/: spec.md
openspec/changes/ts-to-python-migration/specs/rest-server/: spec.md
openspec/changes/ts-to-python-migration/specs/web-ui-rest/: spec.md
openspec/specs/ai-openai-compat/: spec.md
openspec/specs/coding-agent/: spec.md
openspec/specs/dotenv-runtime-config/: spec.md
openspec/specs/pi-extensions/: spec.md
pi-mono/: README.md
src/pi_mono/: __init__.py
src/pi_mono/agent/: agent.py  agent_loop.py  events.py  types.py
src/pi_mono/ai/: api_registry.py  env_api_keys.py  models.py  stream.py  types.py
src/pi_mono/ai/providers/: __init__.py  anthropic.py  base.py  google.py  openai_compat.py  openai_completions.py  openai_responses.py
src/pi_mono/ai/utils/: event_stream.py  validation.py
src/pi_mono/coding_agent/: config.py  main.py
src/pi_mono/coding_agent/cli/: args.py
src/pi_mono/coding_agent/core/: agent_session.py  auth_storage.py  model_registry.py  model_resolver.py  session_manager.py  settings_manager.py  skills.py  system_prompt.py
src/pi_mono/coding_agent/core/compaction/: __init__.py
src/pi_mono/coding_agent/core/extensions/: __init__.py  loader.py  runner.py  types.py
src/pi_mono/coding_agent/core/tools/: __init__.py  bash.py  edit.py  find.py  grep.py  ls.py  read.py  write.py
src/pi_mono/coding_agent/modes/: print_mode.py
src/pi_mono/coding_agent/modes/interactive/: __init__.py  interactive_mode.py
src/pi_mono/config/: __init__.py  dotenv.py  loader.py  settings.py
src/pi_mono/server/: __init__.py  app.py  main.py  schemas.py  session_registry.py  sse.py
src/pi_mono/server/routes/: __init__.py  messages.py  models.py  sessions.py  settings.py
tests/: conftest.py
tests/agent/: test_agent.py
tests/ai/: test_api_registry.py  test_env_api_keys.py  test_stream.py  test_types.py
tests/ai/test_providers/: test_openai_compat.py
tests/coding_agent/: test_agent_session.py  test_compaction.py  test_extensions.py  test_model_registry.py  test_model_resolver.py  test_print_mode.py  test_session_manager.py  test_settings_manager.py  test_system_prompt.py  test_tools.py
tests/config/: test_loader.py  test_settings.py
tests/server/: test_e2e.py  test_routes.py  test_schemas.py  test_session_registry.py
