[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-mono"
version = "0.55.1"
description = "Unified LLM API, Agent runtime, and CLI coding agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mario Zechner" }]
keywords = ["ai", "llm", "agent", "coding-agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "openai>=1.50",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
]

[project.scripts]
pi = "pi_mono.coding_agent.main:main"
pi-server = "pi_mono.server.main:main"

[project.urls]
Homepage = "https://github.com/badlogic/pi-mono"
Repository = "https://github.com/badlogic/pi-mono"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_mono"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["pi_mono"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "\\.\\.\\.",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
